our offices and small changes to about us

--- a/About Us.html
+++ b/About Us.html
@@ -4,41 +4,42 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>About Us</title>
+        <title>Home</title>
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" href="mediaqueries.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
       </head>
-      <header>
-        <section class="nav_bar">
-    <nav class="nav_options">
-      <a href="/index.html"><img src="supercell-logo-white-transp.png" alt="Supercell" width= "74"></a>
-      <div>
-
-        <a class="active" href="#Games">Games</a>
-        <a href="#support">Support</a>
-        <a href="#About Us">About Us</a>
-        <a href="#Work With Us">Work With Us</a>
-      </div>
-      <section class= "related" >
-        <a href="https://creators.supercell.com/en"><img src="creators.png" alt="Supercell" class = "icon" width= "36"></a>
-        <a href="https://make.supercell.com/en/"><img src="make.png" alt="Supercell" class = "icon" width= "36"></a>
-        <a href="https://supercell.com/en/supercell-id/"><img src="id.png" alt="Supercell ID" class = "icon" width= "36"></a>
-        <a href="https://supercell.com/en/supercell-id/"><img src="search.png" alt="search" width= "25"></a>
-      </section>
-            </nav>
-    
-        </section>	
-    </header>
     <body>
-      <section>
+        <header>
+            <section class="nav_bar">
+				<nav class="nav_options">
+					<a href="/index.html"><img src="supercell-logo-white-transp.png" alt="Supercell" width= "74"></a>
+					<div>
+
+						<a class="active" href="#Games">Games</a>
+						<a href="#support">Support</a>
+						<a href="#About Us">About Us</a>
+						<a href="#Work With Us">Work With Us</a>
+					</div>
+					<section class= "related" >
+						<a href="https://creators.supercell.com/en"><img src="creators.png" alt="Supercell" class = "icon" width= "36"></a>
+						<a href="https://make.supercell.com/en/"><img src="make.png" alt="Supercell" class = "icon" width= "36"></a>
+						<a href="https://supercell.com/en/supercell-id/"><img src="id.png" alt="Supercell ID" class = "icon" width= "36"></a>
+						<a href="https://supercell.com/en/supercell-id/"><img src="search.png" alt="search" width= "25"></a>
+					</section>
+                </nav>
+				
+            </section>	
+        </header>
+		<section id="mod">
+			<img src="Aboutus_hero.png" alt="Hero" width= "100%">
+		  	<section class="center">
+				<h1>THE BEST <s>PEOPLE</s> TEAMS MAKE THE BEST GAMES*</h1>
+			</section>
+		</section>
         <section>
-          <section><h1>THE BEST <s>PEOPLE</s> TEAMS<br> MAKE THE BEST GAMES*</h1></section>
-        </section>
-      </section>
-      <section>
         <section id="supercell-title">
           <h1><strong>Supercell</strong></h1>
           <br>
@@ -63,7 +64,7 @@
           </section>
         </section>
       </section>
-      <section><img src="everdale-people-group" alt="friendly people"></section>
+      <section><img src="everdale-people-group.png" alt="friendly people" width="100%"></section>
       <section>
         <section>
           <section><h2>Our Beliefs, Our Legacy</h2></section>
