--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 				
             </section>	
         </header>
-		<div class="container">
-			<img src="index_hero.jpg" alt="Hero" width= "100%">
-		  	<div class="center">
+		<section>
+			<img src="index_hero.png" alt="Hero" width= "100%">
+		  	<section class="center">
 				<h1>Supercell</h1>
 				<p>Makers of Hay Day, Clash of Clans, Boom<br>Beach, Clash Royale and Brawl Stars.</p>
-			</div>
-		</div>
+			</section>
+		</section>
 		
 		
 	<section class="news">
@@ -47,14 +47,14 @@
 			
 			
 	  <a target="_self" href="#" class = "main_news">
-					<figure class="main_news_image">
-					  <img src= "ClashOnPC.png" alt= "Clash is available on PC" width="60%">
-						<figcaption class="main_news_info">
-							<h2>Clash of Clans and Clash Royale are now officially available on PC!</h2>
-							<p>News</p>
-						</figcaption>
-					</figure>
-				</a>
+		<figure class="main_news_image">
+			<img src= "ClashOnPC.png" alt= "Clash is available on PC" width="60%">
+			<figcaption class="main_news_info">
+				<h2>Clash of Clans and Clash Royale are now officially available on PC!</h2>
+				<p>News</p>
+			</figcaption>
+		</figure>
+		</a>
 				
 	  <section class="secondary_news">
 				<ul class= "secondary_news_list">
