new images and editing of our offices

--- a/Our Offices.html
+++ b/Our Offices.html
@@ -33,13 +33,84 @@
             </section>	
         </header>
 		<section>
-			<img src="index_hero.png" alt="Hero" width= "100%">
+			<img src="our_offices_hero.0330221d.webp" alt="Hero" width= "100%" style="filter:brightness(50%);">
 		  	<section class="center">
-				<h1>Supercell</h1>
-				<p>Makers of Hay Day, Clash of Clans, Boom<br>Beach, Clash Royale and Brawl Stars.</p>
+				<h1>Our Offices</h1>
+				<h2>Four Unique Personalities. One united team.</h2>
 			</section>
 		</section>
+		<section class="des_container">
+			<p>Our global teams are home to individuals from over 40 nationalities. We<br> 
+			believe in transparency, open communication and spending time with one<br> 
+			another. While all teams have their own unique traits, it's the underlying<br> 
+			culture, shared values and love for games that keep us together.</p>
+		</section>
 
+		<section>
+			<nav class="footer_padding">
+				<ul class="office_locations">
+					<li><a href="" target="_self">Helsinki, Finland</a></li>
+					<li><a href="" target="_self">San Francisco, United States</a></li>
+					<li><a href="" target="_self">Shanghai, China</a></li>
+					<li><a href="" target="_self">Seoul, South Korea</a></li>
+				</ul>
+			</nav>
+		</section>
+		<section id="location">
+			<h1>Helsinki,Finland</h1>
+			<h2>Game Studio and HQ</h2>
+		</section>
+		<section class ="des_container">
+			<p>
+				It's a poorly kept secret that Supercell's first office was a snug 35m2 room that had to fit 15 people,<br>
+				their laptops and a coffee-maker. Eventually the CEO moved his desk (a cardboard box at the time)<br>
+				out into the hallway to free up some space. In 2021, after outgrowing a number of locations around<br>
+				Helsinki, we opened our own, custom-designed office on the seafront, just south of the city center.
+			</p>
+		</section>
+		<section class="vid_container">
+			<iframe width="80%" height="650px" src="https://www.youtube.com/embed/3fLxSw42RZk?si=VJcrJDkTf3PfPzWJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		</section>
+		<section class="container">
+			
+			<section class="a11">
+				<section class="a1"><img src="helsinki_workplace.png"></section>
+				<section class="a1"><img src="helsinki_workplace_1.png"></section>
+				<section id="a2">
+					<section class="a2"><img src="helsinki_workplace_3.png"></section>
+					<section class="a2"><img src="helsinki_workplace_4.png"></section>
+					<section class="a2"><img src="helsinki_workplace_5.webp"></section>
+					<section class="a2"><img src="step1.4c7b5b6d.webp"></section>
+				</section>
+			</section>
+		</section>
+		
+		<section class="des_container">
+			<p>The Helsinki office is home to over 250 passionate professionals from various backgrounds and <br>
+				walks of life. Arounds two thirds of us are directly involved with making games. In addition to five <br>
+				live teams of roughly 10-25 people each, we have numerous new game teams at prototype stage <br>
+				working in pairs, trios and more. We mostly stick to speaking in English for work, but you'll hear <br>
+				chatter in languages from all over the world around the office.<br><br>
+				Every week starts with a company breakfast while on Fridays we get together for an all-hands <br>
+				gathering to share game updates and company news. This often gives way to refreshments, play<br>
+				sessions and casual conversations.
+			</p>
+		</section>
+		<section >
+			<section id="career_title">
+				<h2>HELSINKI OPEN POSITIONS</h2>
+			</section>
+			<section>
+				<section><p>Job Title</p></section>
+				<section><button id="Career_position">Position</button></section>
+				<section><button id="Career Category">Category</button></section>
+			</section>
+			<ul>
+				<li><a href=""></a></li>
+				<li></li>
+			</ul>
+		</section>
+		
 		<footer role="contentinfo" class="btm">
 			<section class= "f">
 				<nav class="nav_options">
