--- a/Our Offices.html
+++ b/Our Offices.html
@@ -34,7 +34,7 @@
             </section>	
         </header>
 		<section>
-			<img src="images/Aboutus_hero.png" alt="Hero" width= "100%" style="filter:brightness(50%);">
+			<img src="images/our_offices_hero.png" alt="Hero" width= "100%" style="filter:brightness(50%);">
 		  	<section class="hero_txt">
 				<h1>Our Offices</h1>
 				<p>Four Unique Personalities. One united team.</p>
@@ -154,7 +154,7 @@
 		
 		<a class="chat-button" onclick="openChat()"><img src="images/starr icon.jpg" alt="supercell bot profile picture" width="30%"  style="border-radius: 100%;"></a>
 		<section class="chat-popup" id="conversation">
-			<form class="form-container">
+			<form class="chat-container">
 				<section class="chatbot_header">
 					<img src="images/starr icon.jpg" alt="supercell bot profile picture" class="profile_picture">
 					<h2>Ask Supercell</h2>
