--- a/Support.html
+++ b/Support.html
@@ -12,7 +12,7 @@
     </head>
     <style>
         .hero_txt{
-            top: 88%;
+            top: 70%;
         }
         .support_sections{
             display: flex;
@@ -43,14 +43,14 @@
 					<section id="header_options">
 						<a href="Games.html">Games</a>
 						<a href="Support.html">Support</a>
-						<a href="About Us.html" style="margin-right: 5px;">About Us</a>
-						<a href="Our Offices.html" style="margin-right: 5px;">Work With Us</a>
+						<a href="About Us.html">About Us</a>
+						<a href="Our Offices.html">Work With Us</a>
                     </section>
 
 					<section id= "header_related">
 						<a href="#https://creators.supercell.com/en"><img src="images/creators.png" alt="Supercell" class = "icon" width= "36px"></a>
 						<a href="#https://make.supercell.com/en/"><img src="images/make.png" alt="Supercell" class = "icon" width= "36px"></a>
-						<a href="Sign In.html"><img src="id.png" alt="Supercell ID" class = "icon" width= "36px"></a>
+						<a href="Sign In.html"><img src="images/id.png" alt="Supercell ID" class = "icon" width= "36px"></a>
 						<a ><img src="images/search.png" alt="search" width= "20px"></a>
 					</section>
                 </nav>
@@ -108,7 +108,7 @@
         <footer role="contentinfo" class="footer_ext">
             <section class= "footer_int">
                 <nav class="footer_nav_options">	
-                        <a href="/index.html"><img src= "supercell-logo-white-transp.png" alt="Supercell" height="62"></a>
+                        <a href="/index.html"><img src= "images/supercell-logo-white-transp.png" alt="Supercell" height="62"></a>
                         <section id="social">
                             <a href="https://www.youtube.com/supercell"><img src="images/Youtube Supercell.png" alt="Youtube" height= "32px"></a>
                             <a href="https://www.facebook.com/supercell"><img src="images/Facebook Supercell.png" alt="Facebook" height= "32px"></a>
