--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
 		<a class="chat-button" onclick="openChat()"><img src="images/starr icon.jpg" alt="supercell bot profile picture" width="30%"  style="border-radius: 100%;"></a>
 		<section class="chat-popup" id="conversation">
-			<form class="form-container">
+			<form class="chat-container">
 				<section class="chatbot_header">
 					<img src="images/starr icon.jpg" alt="supercell bot profile picture" class="profile_picture">
 					<h2>Ask Supercell</h2>
@@ -258,7 +258,7 @@
 					<section id="social">
 						<a href="https://www.youtube.com/supercell"><img src="images/Youtube Supercell.png" alt="Youtube" height= "32px"></a>
 						<a href="https://www.facebook.com/supercell"><img src="images/Facebook Supercell.png" alt="Facebook" height= "32px"></a>
-						<a href="https://www.instagram.com/supercell/"><img src="Instagram Supercell.png" alt="Instagram" height= "32px"></a>
+						<a href="https://www.instagram.com/supercell/"><img src="images/Instagram Supercell.png" alt="Instagram" height= "32px"></a>
 						<a href="https://twitter.com/i/flow/login?redirect_after_login=%2Fsupercell"><img src="images/Twitter Supercell.png" alt="Twitter" height= "32px"></a>
 						<a href="https://www.linkedin.com/company/supercell/"><img src="images/Linkedin Supercell.png" alt="LinkedIn" height= "32px"></a>
 						<a href="https://www.glassdoor.com/Overview/Working-at-Supercell-EI_IE511675.11,20.htm"><img src="images/Glassdoor Supercell.png" alt="Glassdoor" height= "32px"></a>
