--- a/About Us.html
+++ b/About Us.html
@@ -163,7 +163,7 @@
       
       <a class="chat-button" onclick="openChat()"><img src="images/starr icon.jpg" alt="supercell bot profile picture" width="30%"  style="border-radius: 100%;"></a>
       <section class="chat-popup" id="conversation">
-        <form class="form-container">
+        <form class="chat-container">
           <section class="chatbot_header">
             <img src="images/starr icon.jpg" alt="supercell bot profile picture" class="profile_picture">
             <h2>Ask Supercell</h2>
