--- a/Sign In.html
+++ b/Sign In.html
@@ -13,6 +13,7 @@
         #form_header h1{
             color: #000;
         }
+
         .form{
             display: inline-block;
             width: 100%;
@@ -20,7 +21,6 @@
 
         #login_details{
             padding: 0 45vw;
-            flex: 45%;
         }
 
         #form_header{
@@ -43,12 +43,25 @@
             font-weight: 500;
             border: none;
         }
+        #username, #password{
+            background-color: #f2f2f2;
+            border: none;
+            width: 200px;
+            height: 39px;
+            border-radius: 8px;
+        }
+        @media screen and (max-width:576px) {
+            #login_details{
+                padding: 0 27vw;
+            }
+            #login_img img{
+                width: 60%;
+            }
+        }
     </style>
     <header>
         <section class="nav_bar">
-            <nav class="header_nav_options">
-                <a href="index.html"><img src="images/supercell-logo-white-transp.png" alt="Supercell" width= "74"></a>
-            </nav>
+            <a href="index.html"><img src="images/supercell-logo-white-transp.png" alt="Supercell" width= "74"></a>
         </section>
     </header>
     <body>
@@ -59,9 +72,9 @@
                 </section>
                 <section id="login_details">
                     <label for="username">Supercell ID</label><br>
-                    <input type="text" name="username" id="username"placeholder="Enter Supercell ID" required><br><br>
+                    <input type="text" name="username" id="username"placeholder=" Enter Supercell ID" required><br><br>
                     <label for="password">Password</label><br>
-                    <input type="password" name="password" id="password" placeholder="Enter Password" required><br>
+                    <input type="password" name="password" id="password" placeholder=" Enter Password" required><br>
                     <section id="output">
                     
                     </section>
