--- a/Support.html
+++ b/Support.html
@@ -150,7 +150,7 @@
         <footer role="contentinfo" class="footer_ext">
             <section class= "footer_int">
                 <nav class="footer_nav_options">	
-                        <a href="/index.html"><img src= "images/supercell-logo-white-transp.png" alt="Supercell" height="62"></a>
+                        <a href="index.html"><img src= "images/supercell-logo-white-transp.png" alt="Supercell" height="62"></a>
                         <section id="social">
                             <a href="https://www.youtube.com/supercell"><img src="images/Youtube Supercell.png" alt="Youtube" height= "32px"></a>
                             <a href="https://www.facebook.com/supercell"><img src="images/Facebook Supercell.png" alt="Facebook" height= "32px"></a>
